update yml config

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,5 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Select Xcode
+      run: sudo xcode-select -switch /Applications/Xcode.app
+
     - name: Build and test
       run: xcodebuild clean build -workspace QuizApp/QuizApp.xcworkspace -scheme "CI" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 14,OS=16.4" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
