--- a/QuizEngine/QuizEngine.xcodeproj/xcshareddata/xcschemes/QuizEngine_iOS.xcscheme
+++ b/QuizEngine/QuizEngine.xcodeproj/xcshareddata/xcschemes/QuizEngine_iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6A997E4F2A6D7F91005205D6"
-               BuildableName = "QuizEngine.framework"
+               BuildableName = "QuizEngine_iOS.framework"
                BlueprintName = "QuizEngine_iOS"
                ReferencedContainer = "container:QuizEngine.xcodeproj">
             </BuildableReference>
@@ -67,7 +67,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6A997E4F2A6D7F91005205D6"
-            BuildableName = "QuizEngine.framework"
+            BuildableName = "QuizEngine_iOS.framework"
             BlueprintName = "QuizEngine_iOS"
             ReferencedContainer = "container:QuizEngine.xcodeproj">
          </BuildableReference>
